--- a/index.html
+++ b/index.html
@@ -4,21 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El bar de moncholo</title>
+    <title>App Bar: Index</title>
     <link rel="stylesheet" href="Boostrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
     
-    <section class="container-md text-center">
-        <h1>
-            Bienvenido al bar de moncholo!
-        </h1>
-    </section>    
+    <header>
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+          <div class="container-md">
+            <a class="navbar-brand px-5" href="index.html">App Bar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+              aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav">
+                <li class="nav-item px-2">
+                  <a class="nav-link" href="index.html">Tomar Pedido</a>
+                </li>
+                <li class="nav-item px-2">
+                  <a class="nav-link" href="pedidos.html">Lista de Pedidos</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </header>
 
-    <section class="container-md">
+    <section class="container-md text-center my-5">
+        <h2>
+            Ingresar nuevo pedido
+        </h2>
+    </section>
+
+    <form id="formulario" class="container-md">
         <div class="formu">
-            <h3>Te pedimos primero que ingreses tu nombre y número de mesa:</h3>
+            <h3>Primero ingresa los datos del cliente:</h3>
             <label for="nombre" class="form-label"></label>
             <input type="text" class="form-control" id="nombre" placeholder="Nombre">
         </div>
@@ -42,11 +65,11 @@
                 <option value="3">MercadoPago</option>
             </select>
         </div>
-    </section>
+    </form>
 
     <div class="container-md">
         <h2>
-            Nuestro Menu:
+            Selecciona los productos pedidos:
         </h2>
     </div>
 
@@ -61,14 +84,8 @@
     </div>
 
 <!-- agregamos un boton para confirmar el pedido -->
-    <div class="container-md">
+    <div class="container-md mb-5">
         <button type="button" class="btn btn-success" id="confirmarPedido">confirmar pedido</button>
-    </div>
-
-    
-
-    <div class="container-md">
-        <p> este es un div generico donde iria el footer de la pagina </p>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
